# inkal

./: .gitignore  README.md  clear_display.py  config.json  config.py  display_data.py  inkal.code-workspace  legal.md  maginkcal.py  pyproject.toml  render_data.py  terms.md  test_display.py
ansible/: hosts.ini  pi-install-playbook.yml
bash/: startup.sh
display/: display.py  epd_12_in_48.py  epd_12_in_48_colour_V2.py  lib_epd12in48b.py
gcal/: GoogleAppScriptEvent.py  GoogleAppScriptTask.py  converter.py  event.py  gcal.py  google_auth.py  google_calendar.py  google_tasks.py  inkal_event.py  inkal_task.py  sebastian.sandner89@gmail.com.token.pickle  teamsandner@gmail.com.token.pickle  test-events.json  test_calendar.py  typings_google_task.py
power/: pi_sugar.py  power.py  test_pi_sugar.py
render/: calendar_template.html  html_generator.py  render.py  styles.css  test_calendar.html  test_display_data.pickle  test_events.pickle  test_render.py
shell/: startup.sh
shell/systemd/: maginkcal.service  maginkcal.timer  start.sh
